Search results returning category too - can be further modified also

--- a/themes/bc/pages/home.htm
+++ b/themes/bc/pages/home.htm
@@ -6,9 +6,10 @@ is_hidden = 0
 [searchInput]
 useAutoComplete = 1
 autoCompleteResultCount = 5
-showProviderBadge = 1
+showProviderBadge = 0
 searchPage = "search-results.htm"
 ==
+<?php
 function onStart()
 {
     $db_categories = Db::table('rainlab_blog_categories')->get();
@@ -19,6 +20,7 @@ function onStart()
     }
     $this['categories'] = $cat_list;
 }
+?>
 ==
 <section id="sub-header">
     <div class="row top-container text-center">
