Part-styled, recent knowledge is functioning

--- a/themes/bc/pages/article.htm
+++ b/themes/bc/pages/article.htm
@@ -68,6 +68,7 @@ function onStart()
     }
 }
 ==
+<img src="/themes/bc/assets/images/accounting-icon.png"/>
 {% if (article.title != NULL) %}
 
     <section id="sub-header">
