Category page styled

--- a/themes/bc/pages/article.htm
+++ b/themes/bc/pages/article.htm
@@ -71,7 +71,7 @@ function onStart()
 <img src="/themes/bc/assets/images/accounting-icon.png"/>
 {% if (article.title != NULL) %}
 
-    <section id="sub-header">
+    <section id="section-header">
         <div class="row top-container col-md-12">
             <div class="center-80pc">
                 <h1 id="category-header">{{ category.name }}</h1>
