Fixed recent articles bug

--- a/themes/bc/pages/article.htm
+++ b/themes/bc/pages/article.htm
@@ -51,6 +51,7 @@ function onStart()
                             -> join('backend_users', 'rainlab_blog_posts.user_id', '=', 'backend_users.id')
                             -> where('rainlab_blog_posts_categories.category_id', '=', $current_category->id)
                             -> where('rainlab_blog_posts.published', '=', 1)
+                            -> where('rainlab_blog_posts.slug', '!=', $this->param('slug'))
                             -> select('title', 'slug', 'content_html', 'excerpt', 'first_name', 'last_name', 'published_at')
                             -> orderBy('published_at', 'desc')
                             -> take(2)
